Fixed footer media query on mobile S

--- a/style.css
+++ b/style.css
@@ -621,7 +621,8 @@ footer {
 @media screen and (max-width: 900px) {
 
     main,
-    header {
+    header,
+    footer {
         margin: 0;
         min-width: 360px;
     }
